# rust-study

./: .gitignore  Cargo.toml  Readme.md  cargo.toml
.github/: dependabot.yml
.github/codeql/: codeql-rust-config.yml
.github/workflows/: codeql-rust-analysis.yml  codeql.yml  rust.yml
example1/: Cargo.toml  Makefile  Readme.md
example1/src/: lib.rs  main.rs
example10/: Cargo.toml  README.md  rust-toolchain.toml
example10/common/: Cargo.toml
example10/common/src/: lib.rs
example10/src/: main.rs
example10/wallet/bitcoin/: Cargo.toml
example10/wallet/bitcoin/src/: lib.rs
example10/wallet/ethereum/: Cargo.toml
example10/wallet/ethereum/src/: lib.rs
example10/wallet/tron/: Cargo.toml
example10/wallet/tron/src/: lib.rs
example2/: README.md  cargo.toml
example2/env/: Cargo.toml  Makefile  README.md  env.sample.yml
example2/env/src/: lib.rs  loader.rs  main.rs  model.rs
example2/mariaDb/: Cargo.toml  Makefile
example2/mariaDb/src/: main.rs
example2/mariaDb/src/db/: driver.rs  mariadb.rs  mod.rs
example3/: Cargo.toml  README.md
example3/src/: cli.rs  constants.rs  lib.rs  main.rs
example3/tests/: day_after_test.rs
example4/: Cargo.toml  README.md  main.rs
example5/: Cargo.toml  README.md
example5/src/: main.rs
example6/: Cargo.toml  README.md
example6/src/: main.rs
example6/src/controllers/: default_controller.rs  hello_controller.rs  mod.rs
example6/src/models/: default_model.rs  mod.rs
example6/src/router/: mod.rs
example6/src/services/: default_service.rs  hello_service.rs  mod.rs
example7/: Cargo.toml  README.md
example7/src/: main.rs
example8/: Cargo.toml  README.md
example8/src/: api_gateway.rs  greeting_service.rs  i18n_service.rs  main.rs
example9/: Cargo.toml  REAME.md
example9/src/: env.sample.yml  lib.rs  main.rs
example9/src/application/: service.rs
example9/src/domain/: config.rs  s3.rs
example9/src/env/: config.rs  mod.rs
example9/src/infra/: mod.rs  s3_client.rs  secrets_manager.rs
example9/src/infrastructure/: aws_config.rs  aws_s3.rs  aws_secrets.rs  mod.rs
example9/src/interfaces/: cli.rs
example9/src/usecase/: s3_service.rs
example_sss/: Cargo.toml  README.md
example_sss/src/: main.rs  seed.rs  sss.rs
