[package]
name = "example7"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = { version = "0.8.7" }
axum-extra = {  version = "0.12.2" }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }