[package]
name = "example9"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

aws-config = "1.1.9"
aws-sdk-s3 = "1.25.0"
aws-sdk-secretsmanager = "1.19.0"
aws-credential-types = "1.2.10"