[package]
name = "example9"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = {  version= "1.8.11" }
aws-sdk-s3 = { version = "1.4.0", features = ["rt-tokio"] }
aws-sdk-sts = "0.0.26-alpha"
aws-sdk-secretsmanager = "0.0.26-alpha"
aws-types = "1.3.10"
aws-smithy-xml = "0.30.0-alpha"
xmlparser = "0.13.3"
tokio = { version = "1.21.2", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
