[package]
name = "mariadb"
version = "0.1.0"
edition = "2021"

[dependencies]
env = { path = "../env" }
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-native-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1"
async-trait = "0.1.89"
once_cell = "1.21.3"
